--- a/style.css
+++ b/style.css
@@ -93,9 +93,10 @@ h1 {
 
 .pattern-grid {
   display: grid;
+  justify-items: center;
+  align-items: center;
   grid-template-columns: repeat(5, 1fr); /* Adjust based on pattern size */
   grid-gap: 2px;
-  justify-items: center;
   padding: 5px;
 }
 
